<resources>
    <string name="app_name">MINERVA</string>
    <string name="app_content">TECHNOLOGY SOLUTIONS</string>
    <string name="title_update_app">"New version notice"</string>
    <string name="msg_update_app">New version is available. Please update for better experience.</string>
    <string name="msg_need_permission">Permissions are need for application.</string>
    <string name="mgs_open_location">"To continue, please turn on your device's location"</string>
    <string name="msg_text_empty">Input Required</string>
    <string name="title_error_login">Error</string>
    <string name="text_error_required">Required</string>
    <string name="text_error_not_match_regex_default">Invalid data</string>
    <string name="text_project_management">Project Management</string>
    <string name="text_project_da">Project</string>
    <string name="text_project">Project</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_list">List</string>
    <string name="text_deadline">Nợ quá hạn</string>
    <string name="text_project_juridical_da">Legal Management</string>
    <string name="text_project_juridical">Legal</string>
    <string name="text_manage_task">Task Management</string>
    <string name="text_planning_design">Design Management</string>
    <string name="text_finance_investment">Finance | Investment (F|I)</string>
    <string name="text_sale_marketing">Sales &amp; Marketing (SM)</string>
    <string name="text_internal_management">Internal Management</string>
    <string name="text_contact_management">Contacts</string>
    <string name="text_partner_list">Partners</string>
    <string name="text_internal_list">Internal</string>
    <string name="text_archives">Archives</string>
    <string name="text_logout">Logout</string>
    <string name="text_information_capital"><u>Capital Information</u></string>
    <string name="text_finance_dashboard">Legal</string>
    <string name="text_product_detail">Project Details</string>
    <string name="text_information">Information</string>
    <string name="text_capital">Capital</string>
    <string name="text_finance">Legal</string>
    <string name="text_design_zoning">Design</string>
    <string name="text_sale_and_marketing">Sales &amp; Marketing</string>
    <string name="query_search">Search</string>
    <string name="text_notification">Notification</string>
    <string name="text_finish_status">[%s]</string>
    <string name="text_legal_change_assigned">List of members</string>
    <string name="text_title_responsible">Responsible</string>
    <string name="text_title_assigned">Assignee</string>
    <string name="text_notification_deadline">%d day(s) remained</string>
    <string name="text_titlte_person_contact">Contact</string>
    <string name="text_list_person_contact">Contacts</string>
    <string name="text_note_contact">Note: %s</string>
    <string name="text_shareholder_structure">Shareholders</string>
    <string name="text_total_price_shareholder">Shareholders\' total capital</string>
    <string name="text_investment"><u>Capital</u></string>
    <string name="text_total_investment">Total capital</string>
    <string name="text_funds">Capital:</string>
    <string name="text_loan">Loans:</string>
    <string name="text_title_finish">Finished</string>
    <string name="text_title_from">From</string>
    <string name="text_title_to">to</string>
    <string name="text_title_empty_day">Date -/-/-</string>
    <string name="text_title_develop">In Progress</string>
    <string name="text_title_finish_late">Late Finished</string>
    <string name="text_title_late">Overdue</string>
    <string name="text_title_stop">Stopped</string>
    <string name="text_title_undevelop">Todo</string>
    <string name="text_title_finish_state">Finished</string>
    <string name="text_title_person_assigned">Assignee:</string>
    <string name="text_complete">Finished</string>
    <string name="text_inprogress">In Progress</string>
    <string name="text_waiting">Waiting</string>
    <string name="text_stop">Stopped</string>
    <string name="text_new">New</string>
    <string name="text_no_task">No tasks</string>
    <string name="text_notification_enter_task">Click + button to create new task</string>
    <string name="check_double_click_exit_app">Please click BACK again to exit</string>
    <string name="warning_check_server_again">Could not connect to server. Please try again!</string>
    <string name="error_system_msg">An error has occurred</string>
    <string name="error_internet_connect">No Internet Connection!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_user_name">Username</string>
    <string name="text_hint_input_username">Enter your username</string>
    <string name="text_password">Password</string>
    <string name="text_hint_input_password">Enter your password</string>
    <string name="text_forget_password">Forgot password?</string>
    <string name="text_login">Login</string>
    <string name="text_required">Required</string>
    <string name="text_error_user_name_not_exsit">Invalid account</string>
    <string name="text_error_wrong_password">Incorrect password</string>
    <string name="text_hint_input_project_task_description">Enter task description here</string>
    <string name="text_project_task_participant">Task participants</string>
    <string name="text_project_task_participant_assigned">Assignee</string>
    <string name="text_project_task_participant_response">Responsible</string>
    <string name="text_time">Time</string>
    <string name="text_from_year">From</string>
    <string name="text_end_year">To</string>
    <string name="text_project_task_time_start_date">From</string>
    <string name="text_project_task_time_end">To</string>
    <string name="text_project_task_time_remain">Remained days:</string>
    <string name="text_detail">Details</string>
    <string name="text_project_task_progress">Progress (%)</string>
    <string name="text_project_task_detail_version">Version</string>
    <string name="text_project_task_detail_priority">Priority</string>
    <string name="text_contact_man">Contact</string>
    <string name="text_project_task_add_contact">Add contact</string>
    <string name="text_project_task_attachment_file">Attachment</string>
    <string name="text_project_task_add_attach">Add attachment</string>
    <string name="text_attach_file_update">Update</string>
    <string name="text_position">Location</string>
    <string name="text_project_task_determine_position">Click here to add location</string>
    <string name="text_description">Description</string>
    <string name="text_error_username_required">Username is required</string>
    <string name="text_error_password_required">Password is required</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_done">Done</string>
    <string name="text_save">Save</string>
    <string name="text_title_project_task_status">Status</string>
    <string name="text_action">Activities</string>
    <string name="text_relations">Relations</string>
    <string name="text_watchers">Watchers</string>
    <string name="text_add_watchers">Add watchers</string>
    <string name="text_remove">Remove</string>
    <string name="text_parent">Parent</string>
    <string name="text_name">Name</string>
    <string name="text_status">Status</string>
    <string name="text_children">Children</string>
    <string name="text_hint_input_project_task_action_description_comment">Your comment</string>
    <string name="text_title_reset_password">Reset password</string>
    <string name="text_okay">OK</string>
    <string name="text_title_work_description">Task description</string>
    <string name="text_investor">Investor:</string>
    <string name="text_total_area_land">Total area:</string>
    <string name="text_title_design_drawing">Blueprint</string>
    <string name="text_title_see_drawing_2D">View in 2D</string>
    <string name="text_title_see_drawing_3D">View in 3D</string>
    <string name="text_title_day">Date</string>
    <string name="text_title_design_stage">Stage(s)</string>
    <string name="text_title_processing">Processing:</string>
    <string name="text_title_juridical_soil">%1$s (%2$d/%3$d)</string>
    <string name="text_date_juridical_soil">Date %s</string>
    <string name="text_title_progress">On Hold</string>
    <string name="text_image_project">Images</string>
    <string name="text_information_project_detail">General Information</string>
    <string name="text_duration_project">Land Use Term:</string>
    <string name="text_start_date_project">Start date:</string>
    <string name="text_money_annual_project">Annual rent:</string>
    <string name="text_total_land_size_project">Total area:</string>
    <string name="tv_max_floor_project">Max floor number:</string>
    <string name="text_max_height_project">Max height:</string>
    <string name="text_max_basement_project">Max basement number:</string>
    <string name="text_buiding_density_project">Building density:</string>
    <string name="text_location_project">Address:</string>
    <string name="text_title_progress_task">Progress</string>
    <string name="text_title_edit_version">Version</string>
    <string name="text_day">Day</string>
    <string name="text_month">Month</string>
    <string name="text_year">Year</string>
    <string name="text_vung">Region</string>
    <string name="text_DBSCL">Đồng Bằng Sông Cửu Long</string>
    <string name="text_NTB">Nam Trung Bộ</string>
    <string name="text_TN">Tây Nguyên</string>
    <string name="text_TBB">Tây Bắc Bộ</string>
    <string name="text_DBSH">Đồng Bằng Sông Hồng</string>
    <string name="text_DBB">Đông Bắc Bộ</string>
    <string name="text_BTB">Bắc Trung Bộ</string>
    <string name="text_TCKV">All</string>
    <string name="text_province">Province</string>
    <string name="text_total_area">Total area</string>
    <string name="text_investment_capital">Capital (vnđ)</string>
    <string name="text_investment_capital_1">Capital:</string>
    <string name="text_time_start">Start time</string>
    <string name="number_picker_formatter" translatable="false">%d</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_filter_data">Filter</string>
    <string name="text_title_create_date">Created on</string>
    <string name="text_by">by</string>
    <string name="text_title_legal_task">Task Management</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="text_title_stage">Stage: %s</string>
    <string name="text_project_term_of_land">%d year(s) remained</string>
    <string name="text_total_area_of_land">%s m²</string>
    <string name="text_floor_and_highest">%d (floor)</string>
    <string name="text_hight_limted">%d (m)</string>
    <string name="text_basement_limited">%d (floor)</string>
    <string name="text_density">%d%</string>
    <string name="text_status_all">All</string>
    <string name="text_status_new">New</string>
    <string name="text_click_detail">Bấm vào để xem thêm chi tiết</string>
    <string name="text_delete_notification">Xóa thông báo này</string>
    <string name="text_turn_off_notification">Tắt những thông báo liên quan đến mục này.</string>
    <string name="text_register_success">Đăng ký thành công</string>
    <string name="text_content_register_success">Bạn đã hoàn tất quy trình đăng ký tài khoản</string>
    <string name="text_start">Bắt đầu</string>
    <string name="text_cancel_contact_online">HỦY HỒ SƠ VAY ONLINE</string>
    <string name="text_detail_cancel_contact">Khi bạn bấm "hủy",mọi thông tin bạn điền sẽ bị mất. Bạn chắc chắn muốn hủy hồ sơ cho vay online chứ?</string>
    <string name="text_birthday">Ngày sinh</string>
</resources>