<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectange_c4_ffffff">

<!--    <View-->
<!--        android:id="@+id/vDrag"-->
<!--        android:layout_width="74dp"-->
<!--        android:layout_height="4dp"-->
<!--        android:layout_marginTop="@dimen/spacing_8dp"-->
<!--        android:background="@color/color_9167f1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="@font/roboto_regular"
        android:id="@+id/tvCancel"
        style="@style/StyleTextView.MediumLarge.696969"
        android:layout_marginStart="@dimen/spacing_12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/spacing_10dp"
        android:text="@string/text_cancel"
        android:textColor="@color/color_a4a4a4"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="@font/roboto_medium"
        android:id="@+id/tvSave"
        style="@style/StyleTextViewMedium.MediumLarge.6D30AB"
        android:layout_marginEnd="@dimen/spacing_12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/spacing_10dp"
        android:text="@string/text_save"
        android:textColor="@color/color_6d30ab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="@font/roboto_medium"
        android:id="@+id/tvTitle"
        style="@style/StyleTextViewMedium.Large.Black"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:text="@string/text_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="@dimen/spacing_14dp"
        android:background="@color/color_a4a4a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_marginTop="@dimen/spacing_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/StyleTextViewMedium.Medium.Black"
            android:id="@+id/tvTitleDayPicker"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/text_day"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/StyleTextViewMedium.Medium.Black"
            android:id="@+id/tvTitleMonthPicker"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/text_month"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/StyleTextViewMedium.Medium.Black"
            android:id="@+id/tvTitleYearPicker"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/text_year"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <vn.minerva.sale.app.util.view.numberpicker.NumberPicker
            android:id="@+id/wpDay"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:layout_weight="1"
            android:textColor="@color/color_a4a4a4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vDivider"
            app:np_dividerThickness="0dp"
            app:np_formatter="@string/number_picker_formatter"
            app:np_max="31"
            app:np_min="1"
            app:np_selectedTextColor="@color/color_9167f1"
            app:np_selectedTextSize="@dimen/spacing_16dp"
            app:np_textSize="@dimen/spacing_14dp"
            app:np_wheelItemCount="3"
            app:np_wrapSelectorWheel="false" />

        <vn.minerva.sale.app.util.view.numberpicker.NumberPicker
            app:np_min="1"
            app:np_max="12"
            android:id="@+id/wpMonth"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:layout_weight="1"
            android:textColor="@color/color_a4a4a4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vDivider"
            app:np_dividerThickness="0dp"
            app:np_formatter="@string/number_picker_format_string"
            app:np_selectedTextColor="@color/color_9167f1"
            app:np_selectedTextSize="@dimen/spacing_16dp"
            app:np_textSize="@dimen/spacing_14dp"
            app:np_wheelItemCount="3"
            app:np_wrapSelectorWheel="false" />

        <vn.minerva.sale.app.util.view.numberpicker.NumberPicker
            app:np_min="1900"
            app:np_max="2002"
            android:layout_weight="1"
            android:id="@+id/wpYear"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:textColor="@color/color_a4a4a4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vDivider"
            app:np_dividerThickness="0dp"
            app:np_formatter="@string/number_picker_formatter"
            app:np_selectedTextColor="@color/color_9167f1"
            app:np_selectedTextSize="@dimen/spacing_16dp"
            app:np_textSize="@dimen/spacing_14dp"
            app:np_wheelItemCount="3"
            app:np_wrapSelectorWheel="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>