<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@color/color_e8e8e8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:id="@+id/imgNotification"
        android:layout_width="@dimen/spacing_60dp"
        android:layout_height="@dimen/spacing_60dp"/>
    <TextView
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:layout_marginEnd="@dimen/spacing_20dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/spacing_20dp"
        style="@style/StyleTextView.Normal.AAAAAA"
        tools:text="Dự án Royal Garden đã cập nhật thêm Chính sách bán hàng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgNotification"
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:layout_marginEnd="@dimen/spacing_20dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/spacing_20dp"
        style="@style/StyleTextView.Normal.AAAAAA"
        android:text="@string/text_click_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:id="@+id/tvClickDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginStart="@dimen/spacing_20dp"
        app:srcCompat="@drawable/ic_error"
        android:id="@+id/imgError"
        app:layout_constraintTop_toTopOf="@id/tvDeleteNotification"
        app:layout_constraintBottom_toBottomOf="@id/tvDeleteNotification"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/roboto_medium"
        style="@style/StyleTextView.Normal.Black"
        android:layout_marginTop="@dimen/spacing_30dp"
        android:text="@string/text_delete_notification"
        android:layout_marginStart="@dimen/spacing_20dp"
        android:layout_marginEnd="@dimen/spacing_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvClickDetail"
        app:layout_constraintStart_toEndOf="@id/imgError"
        android:id="@+id/tvDeleteNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgErrorTurnOff"
        android:layout_marginStart="@dimen/spacing_20dp"
        app:srcCompat="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTurnOffNotification"
        app:layout_constraintBottom_toBottomOf="@id/tvTurnOffNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/roboto_medium"
        android:layout_marginEnd="@dimen/spacing_20dp"
        android:layout_marginBottom="@dimen/spacing_20dp"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:layout_marginStart="@dimen/spacing_20dp"
        app:layout_constraintStart_toEndOf="@id/imgErrorTurnOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNotification"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/text_turn_off_notification"
        style="@style/StyleTextView.Normal.Black"
        android:id="@+id/tvTurnOffNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>